crates/biome_module_graph/src/snapshots/biome_module_graph__module_graph__tests__export_referenced_function.snap
---
source: crates/biome_module_graph/src/module_graph.tests.rs
expression: data.exports
---
{
    Borrowed(
        "foo",
    ): Own(
        JsOwnExport {
            jsdoc_comment: Some(
                JsdocComment(
                    "@returns {string}",
                ),
            ),
            local_name: Some(
                "foo",
            ),
            ty: Type(
                Function(
                    Function {
                        is_async: false,
                        type_parameters: [],
                        name: Some(
                            Borrowed(
                                "foo",
                            ),
                        ),
                        parameters: [],
                        return_type: Type(
                            Type(
                                Unknown,
                            ),
                        ),
                    },
                ),
            ),
        },
    ),
}
