crates/biome_module_graph/src/snapshots/biome_module_graph__module_graph__tests__resolve_export_types.snap
---
source: crates/biome_module_graph/src/module_graph.tests.rs
expression: data.exports
---
{
    Borrowed(
        "superComputer",
    ): Own(
        JsOwnExport {
            jsdoc_comment: None,
            local_name: Some(
                "superComputer",
            ),
            ty: Type(
                Reference(
                    TypeReference {
                        qualifier: TypeReferenceQualifier(
                            [
                                Borrowed(
                                    "DeepThought",
                                ),
                            ],
                        ),
                        ty: Type(
                            Class(
                                Class {
                                    name: Some(
                                        Borrowed(
                                            "DeepThought",
                                        ),
                                    ),
                                    members: [
                                        Method(
                                            MethodTypeMember {
                                                is_async: false,
                                                type_parameters: [],
                                                name: Borrowed(
                                                    "answerMe",
                                                ),
                                                parameters: [],
                                                return_type: Type(
                                                    Type(
                                                        Number,
                                                    ),
                                                ),
                                                is_optional: false,
                                            },
                                        ),
                                        Method(
                                            MethodTypeMember {
                                                is_async: false,
                                                type_parameters: [],
                                                name: Borrowed(
                                                    "giveMeABiggerAnswer",
                                                ),
                                                parameters: [
                                                    FunctionParameter {
                                                        name: Some(
                                                            Borrowed(
                                                                "delta",
                                                            ),
                                                        ),
                                                        ty: Type(
                                                            Number,
                                                        ),
                                                        is_optional: false,
                                                        is_rest: false,
                                                    },
                                                ],
                                                return_type: Type(
                                                    Type(
                                                        Unknown,
                                                    ),
                                                ),
                                                is_optional: false,
                                            },
                                        ),
                                        Method(
                                            MethodTypeMember {
                                                is_async: false,
                                                type_parameters: [],
                                                name: Borrowed(
                                                    "whatWasTheUltimateQuestion",
                                                ),
                                                parameters: [],
                                                return_type: Type(
                                                    Type(
                                                        UnknownKeyword,
                                                    ),
                                                ),
                                                is_optional: false,
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ),
                        type_parameters: [],
                    },
                ),
            ),
        },
    ),
    Borrowed(
        "theAnswer",
    ): Own(
        JsOwnExport {
            jsdoc_comment: None,
            local_name: Some(
                "theAnswer",
            ),
            ty: Type(
                Literal(
                    Number(
                        Borrowed(
                            "42",
                        ),
                    ),
                ),
            ),
        },
    ),
}
