crates/biome_module_graph/src/snapshots/biome_module_graph__module_graph__tests__resolve_exports.snap
---
source: crates/biome_module_graph/src/module_graph.tests.rs
expression: exports
---
{
    Borrowed(
        "a",
    ): Own(
        JsOwnExport {
            jsdoc_comment: Some(
                JsdocComment(
                    "TODO: No types can be detected on these yet.",
                ),
            ),
            local_name: Some(
                "a",
            ),
            ty: Unknown,
        },
    ),
    Borrowed(
        "b",
    ): Own(
        JsOwnExport {
            jsdoc_comment: Some(
                JsdocComment(
                    "TODO: No types can be detected on these yet.",
                ),
            ),
            local_name: Some(
                "b",
            ),
            ty: Unknown,
        },
    ),
    Borrowed(
        "bar",
    ): Own(
        JsOwnExport {
            jsdoc_comment: Some(
                JsdocComment(
                    "@package",
                ),
            ),
            local_name: Some(
                "bar",
            ),
            ty: Function(
                Function {
                    is_async: false,
                    type_parameters: [],
                    name: Some(
                        Borrowed(
                            "bar",
                        ),
                    ),
                    parameters: [],
                    return_type: Type(
                        Unknown,
                    ),
                },
            ),
        },
    ),
    Borrowed(
        "baz",
    ): Own(
        JsOwnExport {
            jsdoc_comment: None,
            local_name: Some(
                "baz",
            ),
            ty: Function(
                Function {
                    is_async: true,
                    type_parameters: [],
                    name: Some(
                        Borrowed(
                            "baz",
                        ),
                    ),
                    parameters: [],
                    return_type: Type(
                        Promise(
                            Unknown,
                        ),
                    ),
                },
            ),
        },
    ),
    Borrowed(
        "d",
    ): Own(
        JsOwnExport {
            jsdoc_comment: Some(
                JsdocComment(
                    "TODO: No types can be detected on these yet.",
                ),
            ),
            local_name: Some(
                "d",
            ),
            ty: Unknown,
        },
    ),
    Static(
        "default",
    ): Own(
        JsOwnExport {
            jsdoc_comment: Some(
                JsdocComment(
                    "@public\n@returns {JSX.Element}",
                ),
            ),
            local_name: Some(
                "Component",
            ),
            ty: Function(
                Function {
                    is_async: false,
                    type_parameters: [],
                    name: Some(
                        Borrowed(
                            "Component",
                        ),
                    ),
                    parameters: [],
                    return_type: Type(
                        Reference(
                            TypeReference {
                                qualifier: TypeReferenceQualifier(
                                    [
                                        Borrowed(
                                            "JSX",
                                        ),
                                        Borrowed(
                                            "Element",
                                        ),
                                    ],
                                ),
                                type_parameters: [],
                            },
                        ),
                    ),
                },
            ),
        },
    ),
    Borrowed(
        "e",
    ): Own(
        JsOwnExport {
            jsdoc_comment: Some(
                JsdocComment(
                    "TODO: No types can be detected on these yet.",
                ),
            ),
            local_name: Some(
                "e",
            ),
            ty: Unknown,
        },
    ),
    Borrowed(
        "foo",
    ): Own(
        JsOwnExport {
            jsdoc_comment: Some(
                JsdocComment(
                    "@returns {string}",
                ),
            ),
            local_name: Some(
                "foo",
            ),
            ty: Function(
                Function {
                    is_async: false,
                    type_parameters: [],
                    name: Some(
                        Borrowed(
                            "foo",
                        ),
                    ),
                    parameters: [],
                    return_type: Type(
                        Unknown,
                    ),
                },
            ),
        },
    ),
    Borrowed(
        "qux",
    ): Own(
        JsOwnExport {
            jsdoc_comment: None,
            local_name: Some(
                "qux",
            ),
            ty: Literal(
                Number(
                    Borrowed(
                        "1",
                    ),
                ),
            ),
        },
    ),
    Borrowed(
        "quz",
    ): Own(
        JsOwnExport {
            jsdoc_comment: Some(
                JsdocComment(
                    "@private",
                ),
            ),
            local_name: Some(
                "quz",
            ),
            ty: Unknown,
        },
    ),
}
